# impact

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  cache.md  cli.md  configuration.md
npm/: install.cjs  install.test.cjs  platform.cjs  prepare-package.cjs  skill.test.cjs  verify-archives.cjs  verify-packages.cjs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-x64-msvc/: package.json
rust/: analysis.rs  config.rs  extract.rs  git.rs  graph.rs  lib.rs  main.rs  model.rs  resolver.rs  workspaces.rs
skills/monorepa-find-dependencies/: SKILL.md
skills/monorepa-find-dependencies/agents/: openai.yaml
skills/monorepa-find-dependencies/scripts/: search.cjs
tests/: native_e2e.rs  performance.rs
tests/fixtures/real-monorepo/: affected.config.jsonc  affected.no-fallback.json  tsconfig.base.json  workspace.yaml
tests/fixtures/real-monorepo/apps/admin/: package.json
tests/fixtures/real-monorepo/apps/admin/src/: default-flag.ts  main.ts
tests/fixtures/real-monorepo/apps/legacy/: package.json
tests/fixtures/real-monorepo/apps/storefront/: package.json  tsconfig.json
tests/fixtures/real-monorepo/docs/: architecture.md
tests/fixtures/real-monorepo/tooling/eslint/: cli.js  index.js  package.json
(+8 files in other folders)
